Tested Ktor with mysql , added a test db

--- a/MusicstreamingAppServer/gradle.properties
+++ b/MusicstreamingAppServer/gradle.properties
@@ -1,4 +1,8 @@
 ktor_version=2.3.6
 kotlin_version=1.9.21
 logback_version=1.4.11
+exposed_version = 0.45.0
+mysql_version=8.0.33
+koin_ktor=3.4.1
+hikaricp_version = 5.0.1
 kotlin.code.style=official
