--- a/MusicstreamingAppServer/src/main/resources/application.conf
+++ b/MusicstreamingAppServer/src/main/resources/application.conf
@@ -12,3 +12,8 @@ jwt {
     audience = "jwt-audience"
     realm = "ktor sample app"
 }
+
+storage{
+    driverClassName = "com.mysql.cj.jdbc.Driver"
+    jdbcURL = "jdbc:mysql://localhost:3306/musicDB?user=root&password=password"
+}
