--- a/MusicStreamingApp/app/src/main/AndroidManifest.xml
+++ b/MusicStreamingApp/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicStreamingApp"
         tools:targetApi="31">
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
