--- a/Kyoku/app/src/main/AndroidManifest.xml
+++ b/Kyoku/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="asset_statements"
+            android:resource="@string/asset_statements" />
     </application>
 
 </manifest>
