--- a/Kyoku/gradle/libs.versions.toml
+++ b/Kyoku/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ hilt = "1.2.0"
 
 okhttp = "4.4.1"
 
-navigation = "2.8.0-beta04"
+navigation = "2.8.0-beta05"
 
 room = "2.6.1"
 
@@ -32,16 +32,16 @@ splashScreen = "1.0.1"
 
 datastorePreferences = "1.1.1"
 
-paging = "3.3.0"
+paging = "3.3.2"
 
-credentials = "1.3.0-beta02"
-googleId = "1.1.0"
+credentials = "1.3.0-rc01"
+googleId = "1.1.1"
 
 coilCompose = "2.6.0"
 
 material3WindowSizeClass = "1.2.1"
 
-media3 = "1.3.1"
+media3 = "1.4.0"
 legacySupport = "1.0.0"
 
 secretsPlugin = "2.0.1"
@@ -96,7 +96,6 @@ dagger-hilt = { group = "com.google.dagger", name = "hilt-android", version.ref 
 dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltCompiler" }
 hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt" }
-
 
 okhttp-url-connection = { group = "com.squareup.okhttp3", name = "okhttp-urlconnection", version.ref = "okhttp" }
 
