--- a/Kyoku/gradle/libs.versions.toml
+++ b/Kyoku/gradle/libs.versions.toml
@@ -41,12 +41,13 @@ coilCompose = "2.6.0"
 
 material3WindowSizeClass = "1.2.1"
 
-media3 = "1.4.0"
+media3 = "1.4.1"
 legacySupport = "1.0.0"
 
 secretsPlugin = "2.0.1"
 
 palette = "1.0.0"
+work = "2.9.1"
 
 composeCompiler = "1.5.1"
 
@@ -129,7 +130,7 @@ legacy-support-V4 = { group = "androidx.legacy", name = "legacy-support-v4", ver
 
 androidx-palette = { group = "androidx.palette", name = "palette-ktx", version.ref = "palette" }
 
-#androidx-work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
+androidx-work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 
 # Gradle
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
