--- a/Kyoku/gradle/libs.versions.toml
+++ b/Kyoku/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ jetbrainsKotlinJvm = "1.9.0"
 
 coroutines = "1.8.0"
 
-desugar_jdk_libs = "2.0.4"
+desugar_jdk_libs = "2.1.2"
 kotlinxSerialization = "1.6.3"
 gson = "2.11.0"
 
@@ -24,7 +24,7 @@ hilt = "1.2.0"
 
 okhttp = "4.4.1"
 
-navigation = "2.8.0-rc01"
+navigation = "2.8.0"
 
 room = "2.6.1"
 
@@ -33,7 +33,7 @@ splashScreen = "1.0.1"
 datastorePreferences = "1.1.1"
 
 paging = "3.3.2"
-foundation = "1.7.0"
+foundation = "1.7.1"
 
 credentials = "1.3.0-rc01"
 googleId = "1.1.1"
