--- a/Kyoku/gradle/libs.versions.toml
+++ b/Kyoku/gradle/libs.versions.toml
@@ -43,7 +43,10 @@ coilCompose = "2.6.0"
 material3WindowSizeClass = "1.3.0"
 
 media3 = "1.4.1"
+media = "1.7.0"
 legacySupport = "1.0.0"
+
+glide = "4.15.1"
 
 secretsPlugin = "2.0.1"
 
@@ -129,7 +132,12 @@ media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", versi
 media3-exoplayer-hls = { group = "androidx.media3", name = "media3-exoplayer-hls", version.ref = "media3" }
 media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3" }
 media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3" }
+media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "media3" }
+media =  { group = "androidx.media", name = "media", version.ref = "media" }
 legacy-support-V4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupport" }
+
+
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 
 androidx-palette = { group = "androidx.palette", name = "palette-ktx", version.ref = "palette" }
 
