building authentication service

--- a/kyoku-server/app/src/main/resources/application.conf
+++ b/kyoku-server/app/src/main/resources/application.conf
@@ -8,3 +8,11 @@ ktor {
     modules = [com.poulastaa.app.AppKt.module]
   }
 }
+
+storage {
+  driverClassName = "com.mysql.cj.jdbc.Driver"
+
+
+  userJdbcURL = "jdbc:mysql://localhost:3307/kyokuUser?user=root&password=password"
+  JdbcURL = "jdbc:mysql://localhost:3308/kyoku?user=root&password=password"
+}
