--- a/kyoku-server/.gitignore
+++ b/kyoku-server/.gitignore
@@ -43,3 +43,10 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+# Ignore environment files
+docker/.env
+
+# Ignore MySQL data folders
+docker/mysql-kyoku-data/
+docker/mysql-kyoku-user-data/
