added redis to application.conf file

--- a/kyoku-server/app/src/main/resources/application.conf.example
+++ b/kyoku-server/app/src/main/resources/application.conf.example
@@ -22,3 +22,9 @@ storage {
   userJdbcURL = "your jdbc url"
   JdbcURL = "your jdbc url"
 }
+
+cache {
+  host = "hour host"
+  port = "6380"
+  password = "your redis password"
+}
