--- a/kyoku-server/app/src/main/resources/application.conf
+++ b/kyoku-server/app/src/main/resources/application.conf
@@ -22,3 +22,9 @@ storage {
   userJdbcURL = "jdbc:mysql://localhost:3307/kyokuUser?user=root&password=password"
   JdbcURL = "jdbc:mysql://localhost:3308/kyoku?user=root&password=password"
 }
+
+cache {
+  host = "localhost"
+  port = "6380"
+  password = "redisPassword"
+}
