--- a/Kyoku/app/src/main/AndroidManifest.xml
+++ b/Kyoku/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Kyoku">
+            android:theme="@style/Theme.Kyoku.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
