google user session can be set when autenticating

--- a/kyoku-server/app/src/main/resources/application.conf
+++ b/kyoku-server/app/src/main/resources/application.conf
@@ -28,3 +28,8 @@ cache {
   port = "6380"
   password = "redisPassword"
 }
+
+session {
+  encryptionKey = "00112233445566778899aabbccddeeff"
+  secretKey = "6819b57a326945c1968f45236589"
+}
