--- a/kyoku-server/app/src/main/resources/application.conf.example
+++ b/kyoku-server/app/src/main/resources/application.conf.example
@@ -28,3 +28,8 @@ cache {
   port = "6380"
   password = "your redis password"
 }
+
+session {
+  encryptionKey = "your session encryption key"
+  secretKey = "your secret key"
+}
