constructing playlist from spotify playlist url route

--- a/kyoku-server/app/src/main/resources/application.conf
+++ b/kyoku-server/app/src/main/resources/application.conf
@@ -33,3 +33,9 @@ session {
   encryptionKey = "00112233445566778899aabbccddeeff"
   secretKey = "6819b57a326945c1968f45236589"
 }
+
+
+spotify{
+  clientId = "543894cfe5654ef3b74311377ab3fffc"
+  clientSecret = "6b2c8fb960034f5b94308b4440b7d1bd"
+}
