--- a/kyoku-server/gradle/libs.versions.toml
+++ b/kyoku-server/gradle/libs.versions.toml
@@ -83,6 +83,9 @@ kotlin-gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
 jakarta-mail = {module = "com.sun.mail:jakarta.mail" , version.ref = "mail"}
 
+ktor-client-core = { module = "io.ktor:ktor-client-core-jvm", version.ref = "ktor" }
+ktor-client-jvm = { module = "io.ktor:ktor-client-apache-jvm", version.ref = "ktor" }
+
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlinJvm" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
