created sharded database for most popular artists by genre

--- a/kyoku-server/app/src/main/resources/application.conf
+++ b/kyoku-server/app/src/main/resources/application.conf
@@ -20,7 +20,8 @@ storage {
   driverClassName = "com.mysql.cj.jdbc.Driver"
 
   userJdbcURL = "jdbc:mysql://localhost:3307/kyokuUser?user=root&password=password"
-  JdbcURL = "jdbc:mysql://localhost:3308/kyoku?user=root&password=password"
+  kyokuJdbcURL = "jdbc:mysql://localhost:3308/kyoku?user=root&password=password"
+  genreArtistShard = "jdbc:mysql://localhost:3309/artistShard?user=root&password=password"
 }
 
 cache {
@@ -35,7 +36,7 @@ session {
 }
 
 
-spotify{
+spotify {
   clientId = "543894cfe5654ef3b74311377ab3fffc"
   clientSecret = "6b2c8fb960034f5b94308b4440b7d1bd"
 }
