--- a/kyoku-server/docker/docker-compose.yml
+++ b/kyoku-server/docker/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "3308:3306"
     volumes: # sequence in file name is important
-      - ./mysql/001_init.sql:/docker-entrypoint-initdb.d/001_init.sql
+      - ./mysql/init_kyoku.sql:/docker-entrypoint-initdb.d/init_kyoku.sql
 
       - ./mysql/insert/01_EntryAlbum.sql:/docker-entrypoint-initdb.d/01_EntryAlbum.sql
       - ./mysql/insert/02_EntryArtist.sql:/docker-entrypoint-initdb.d/02_EntryArtist.sql
@@ -35,6 +35,17 @@ services:
       - ./mysql/insert/EntryRelationSongGenre.sql:/docker-entrypoint-initdb.d/EntryRelationSongGenre.sql
 
       - ./mysql-kyoku-data/data:/var/lib/mysql
+
+  mysql-artist-shard:
+    image: mysql:8.4.0
+    container_name: mysql-genre-artist-shard
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - "3309:3306"
+    volumes:
+      - ./mysql/init_shard_genre_artist.sql:/docker-entrypoint-initdb.d/init_shard_genre_artist.sql
+      - ./mysql-kyoku-shard-genre-artist-data/data:/var/lib/mysql
 
   redis-kyoku:
     image: redis/redis-stack:latest
