--- a/kyoku-server/.gitignore
+++ b/kyoku-server/.gitignore
@@ -45,9 +45,11 @@ bin/
 .DS_Store
 
 # Ignore environment files
+app/src/main/resources/application.conf
 docker/.env
 
 # Ignore MySQL data folders
 docker/mysql-kyoku-data/
 docker/mysql-kyoku-user-data/
 docker/redis-data/
+docker/mysql-kyoku-shard-genre-artist-data/
