shard database can be crated , populated and artist and song popularity can be updated

--- a/shard-manager/src/main/resources/res.json.example
+++ b/shard-manager/src/main/resources/res.json.example
@@ -3,6 +3,7 @@
     "driverClassName": "com.mysql.cj.jdbc.Driver",
     "userJdbcURL": "your jdbc url",
     "kyokuJdbcURL": "your jdbc url",
-    "genreArtistShard": "your jdbc url"
+    "genreArtistShard": "your jdbc url",
+    "shardPopularSongUrl": "your jdbc url",
   }
 }
