fixed country most popular song insert query

--- a/kyoku-server/app/src/main/resources/application.conf.example
+++ b/kyoku-server/app/src/main/resources/application.conf.example
@@ -22,6 +22,7 @@ storage {
   userJdbcURL = "your jdbc url"
   kyokuJdbcURL = your jdbc url"
   genreArtistShard = "your jdbc url"
+  popularShard = "your jdbc url"
 }
 
 cache {
