added setup previews

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - "3308:3306"
-    volumes: # sequence in file name is important
+    volumes: # nameing sequence of the files are important
       - ./mysql/001_init_kyoku.sql:/docker-entrypoint-initdb.d/001_init_kyoku.sql
 
       - ./mysql/insert/01_EntryAlbum.sql:/docker-entrypoint-initdb.d/01_EntryAlbum.sql
