constructing alarm refresh worker

--- a/Kyoku/app/src/main/AndroidManifest.xml
+++ b/Kyoku/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
         android:name=".Kyoku"
@@ -38,6 +39,17 @@
                 tools:node="remove" />
         </provider>
 
+        <receiver
+            android:name="com.poulastaa.main.data.repository.work.RefreshReceiver"
+
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+                <action android:name="android.intent.action.TIME_TICK" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
