--- a/kyoku-server/app/src/main/resources/application.conf.example
+++ b/kyoku-server/app/src/main/resources/application.conf.example
@@ -23,6 +23,7 @@ storage {
   kyokuJdbcURL = your jdbc url"
   genreArtistShard = "your jdbc url"
   popularShard = "your jdbc url"
+  pagingShard = "your jdbc url"
 }
 
 cache {
