--- a/shard-manager/src/main/resources/res.json.example
+++ b/shard-manager/src/main/resources/res.json.example
@@ -5,5 +5,6 @@
     "kyokuJdbcURL": "your jdbc url",
     "genreArtistShard": "your jdbc url",
     "shardPopularSongUrl": "your jdbc url",
+    "pagingSearchUrl": "your jdbc url"
   }
 }
