--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
 docker/.env
-docker/mysql-kyoku-data/
-docker/mysql-kyoku-user-data/
-docker/redis-data/
-docker/mysql-kyoku-shard-genre-artist-data/
-docker/mysql-kyoku-shard-suggestion-data/
-docker/mysql-kyoku-shard-paging-data/
+docker/mysql-data/
